k8s/namespace.yaml
# ==============================================================================
# Namespace
# ==============================================================================
# Note: This namespace is also created by Terraform, but this manifest allows
# kubectl apply to work independently if needed.
apiVersion: v1
kind: Namespace
metadata:
  name: errandy
  labels:
    name: errandy
    app.kubernetes.io/name: errandy
    app.kubernetes.io/part-of: errandy-backend
